# ieeA

./: .gitignore  AGENTS.md  README.md  debug_parse_reconstruct.py  findings.md  progress.md  pyproject.toml  task_plan.md  validation_report.json
.sisyphus/: boulder.json
.sisyphus/notepads/ieeT/: assumptions.md  cli.md  compiler.md  downloader.md  integration.md  llm.md  parser.md  pipeline.md  project_setup.md  rules.md  technical-architecture.md  validator.md
.sisyphus/plans/: fix-nested-environment-protection.md  fix-tex-output-consistency.md  fix-translation-pipeline-v2.md  fix-translation-pipeline.md  ieeT.md
100/2504.09644/: main.bib  main_translated.tex  neurips_2025.bbl  neurips_2025.tex  translation_log_20260203_235351.json  translation_state.json
debug/: 01_flattened.tex  02_no_comments.tex  03_body.tex  03_preamble.tex  05_body_captions_extracted.tex  05_chunks.json  06_math_env_protected.tex  08_commands_protected.tex  08_placeholder_map.json  09_fixed_protected.tex  10_correct_order.tex  11_fixed_with_force.tex  12_final_fix.tex  step1_debug.py  step2_debug.py  test_fix.py
docs/: configuration.md  custom-rules.md  installation.md  known-limitations.md  troubleshooting.md
docs/plans/: 2026-02-20-paragraph-inline-body-fix.md
output/2511.00416/: 00README.json  custom.bib  modified_acl.bbl  modified_acl.tex  translation_state.json
reports/: parser_step_example.md
scripts/: brace_fix_notebook.ipynb  openrouter_concurrency_probe.py  run_e2e_openrouter_c100.sh  test_anthropic_temperature.py  test_cjk_fonts.py  test_openai_temperature.py  test_translation_api.py  validate_assumptions.py
scripts/temperature_test_results/: temperature_test_20260218_084340.json  temperature_test_qwen_20260218_184601.json
src/ieeA/: cli.py
src/ieeA.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ieeA/compiler/: __init__.py  chinese_support.py  latex_compiler.py
src/ieeA/defaults/: config.yaml  examples.yaml
src/ieeA/downloader/: __init__.py
src/ieeA/parser/: chunker.py  latex_parser.py  structure.py
src/ieeA/rules/: config.py  examples.py  glossary.py
src/ieeA/translator/: __init__.py  anthropic_coding_provider.py  anthropic_provider.py  ark_provider.py  bailian_provider.py  http_provider.py  llm_base.py  logger.py  openai_coding_provider.py  openai_provider.py  pipeline.py  prompts.py
src/ieeA/validator/: engine.py  rules.py
src/ieeet/: cli.py
src/ieeet/compiler/: chinese_support.py  latex_compiler.py
src/ieeet/defaults/: config.yaml  glossary.yaml
src/ieeet/parser/: chunker.py  latex_parser.py  structure.py
src/ieeet/rules/: config.py  glossary.py
src/ieeet/translator/: __init__.py  llm_base.py  openai_provider.py  pipeline.py  prompts.py
src/ieeet/validator/: engine.py  rules.py
src/ieet/: cli.py
src/ieet/compiler/: chinese_support.py  engine.py
src/ieet/defaults/: config.yaml
src/ieet/downloader/: arxiv.py
src/ieet/parser/: __init__.py
src/ieet/rules/: config.py  glossary.py  validation_rules.py
src/ieet/translator/: claude_provider.py  doubao_provider.py  pipeline.py  qwen_provider.py
src/ieet/validator/: engine.py
tests/: conftest.py  test_bailian_provider.py  test_batch_translation.py  test_bibliography_parse_integration.py  test_bibliography_resolve.py  test_cli.py  test_compiler.py  test_downloader.py  test_escape_bib_integration.py  test_examples.py  test_glossary_matching.py  test_glossary_preprocessor.py  test_latex_escape.py  test_nested_chunk_in_protected_env.py  test_openai_coding.py  test_parser.py  test_parser_chunk_consistency.py  test_pipeline.py  test_placeholder_restoration.py  test_prompt_stability.py  test_prompts.py  test_provider_cache.py  test_rules.py  test_timeout_handling.py  test_translation_logger.py  test_translator.py  test_universal_corpus.py  test_validator.py  test_validator_fixes.py  test_version.py
tests/2026-02-07/: test_caption_extraction_robustness.py  test_parser_pipeline_refactor.py  test_parser_title_unified.py
tests/integration/: test_e2e.py  test_high_quality_mode.py
tests/universal/: universal.tex
tests/universal/includes/: extra.tex
user_test_script/: concurrent_requests_async.py  doubao_test.py  hjfy作者的博客-1.md  model_comparison_results.json  model_comparison_test.py  model_comparison_viewer.html  setup.ipynb  区分.txt  对比模型.yaml
