[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ieeA"
dynamic = ["version"]
description = "arXiv 论文翻译工具 - 将英文 LaTeX 论文翻译成中文，保留数学公式和文档结构"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [
  {name = "ieeA Team"},
]
keywords = ["arxiv", "latex", "translation", "chinese", "llm", "academic", "paper"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Markup :: LaTeX",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "pylatexenc",
  "typer",
  "rich",
  "pyyaml",
  "pydantic",
  "requests",
  "openai>=1.0.0",
]

[project.optional-dependencies]
ark = ["volcengine-python-sdk[ark]>=1.0.116"]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "mypy",
  "build",
  "twine",
]

[project.urls]
Homepage = "https://github.com/ieeA/ieeA"
Repository = "https://github.com/ieeA/ieeA"

[project.scripts]
ieeA = "ieeA.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
license-files = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = []
